Fixed top header spacing issues

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -70,6 +70,10 @@ body div {
   overflow-wrap: break-word;
 }
 
+header.gnav > div {
+  margin: 0;
+}
+
 /* equivalent of section title in AEM */
 .section > .content > h2 {
   font-size: 2rem;
